desctop welcome section

--- a/source/index.html
+++ b/source/index.html
@@ -84,6 +84,7 @@
                         Нажимая на кнопку, вы соглашаетесь <br> с <a href="#" class="confidence-policy__link">Политикой конфиденциальности</a>
                     </p>
                 </form>
+                <span class="welcome-section__arrow">Листать далее</span>
             </div>
         </section>
         <section class="main__section tabs-section" :class="{ 'main__section--hidden' : isFormPopup }">
