--- a/source/index.html
+++ b/source/index.html
@@ -448,7 +448,7 @@
                 <h2 class="contact-popup__title title">
                     <span class="title__line">Дайте нам знать</span>
                     <span class="title__line">О вашем проекте</span>
-                    <span class="orange-label">Проектная документация</span>
+                    <span class="orange-label orange-label--form">Проектная документация</span>
                 </h2>
                 <div class="contact-popup__tel-block tel-block">
                     <p class="tel-block__title">Свяжитесь с нами</p>
