--- a/source/index.html
+++ b/source/index.html
@@ -414,10 +414,10 @@
         </section>
         <section class="main__section reviews-section" :class="{ 'main__section--hidden' : isFormPopup }">
             <div class="reviews-section__wrapper">
-                <h2 class="reviews-section__title title">
-                    О нас говорят
-                </h2>
                 <div class="reviews-section__list-wrapper reviews">
+                    <h2 class="reviews-section__title title">
+                        О нас говорят
+                    </h2>
                     <div class="reviews__controls">
                         <button class="reviews__button reviews__button--prev"><span class="visually-hidden">Назад</span></button>
                         <button class="reviews__button reviews__button--next"><span class="visually-hidden">Вперед</span></button>
@@ -428,8 +428,16 @@
                             <cite class="reviews__author">Администрация школы №58</cite>
                         </li>
                         <li class="reviews__item swiper-slide">
-                            <blockquote class="reviews__review">Этого правила придерживаемся в своей работе и по сей день: делаем эксклюзивные проекты, которые сочетают в себе красоту и функциональность. Возможно, это не скромно, но проекты такого же высокого качества, как мы, делают только единицы. И каждый наш клиент, партнер или конкурент подтвердит, что дотошность к каждому элементу и исполнительность - визитная карточка Базис-КР. </blockquote>
-                            <cite class="reviews__author">Администрация школы №58</cite>
+                            <blockquote class="reviews__review">ТОВ «МАКТОП» співпрацювало з ТОВ «БАЗИС-КР» 
+                                у виконанні робіт на розробку проектної документації (стадія 
+                                «Робочий проект») «Будівництво торгово-офісної будівлі та гаражу 
+                                з вбудованими побутовими приміщеннями». 
+                                В результаті робота була виконана професійно і в 
+                                установлений строк. 
+                                плануємо і далі підтримувати ділові контакти з ТОВ 
+                                КР», які завжди дотримуються лояльного і індивідуального 
+                                підходу до замовника.</blockquote>
+                            <cite class="reviews__author">М. Земляк Директор ТОВ «МАКТОП»</cite>
                         </li>
                         <li class="reviews__item swiper-slide">
                             <blockquote class="reviews__review">Этого правила придерживаемся в своей работе и по сей день: делаем эксклюзивные проекты, которые сочетают в себе красоту и функциональность. Возможно, это не скромно, но проекты такого же высокого качества, как мы, делают только единицы. И каждый наш клиент, партнер или конкурент подтвердит, что дотошность к каждому элементу и исполнительность - визитная карточка Базис-КР. </blockquote>
